[package]
name = "noksaek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
clap = { version = "4.5.3", features = ["derive"] }
handlebars = "5.1.2"
libc = "0.2.153"
linkerset = { path = "linkerset" }
log = "0.4.21"
mime = "0.3.17"
mime_guess = "2.0.4"
paste = "1.0.14"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.10.4"
rustls = "0.23.3"
rustls-pemfile = "2.1.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = "0.26.0"
tokio-utils = "0.1.2"
url = "2.5.0"
urlencoding = "2.1.3"
users = "0.11.0"
