[workspace]
members = [".", "fuzz"]
default-members = ["."]

[package]
name = "noksaek"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "noksaek"
test = false

[lib]
doctest = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async", "async_tokio", "html_reports"] }
libfuzzer-sys = "0.4"

[[bench]]
name = "bench_server"
harness = false

[dependencies]
async-trait = "0.1.79"
clap = { version = "4.5.3", features = ["derive"] }
dashmap = "6.1.0"
flexi_logger = "0.29.0"
handlebars = "6.0.0"
libc = "0.2.153"
linker-set = "0.3.0"
log = "0.4.21"
mime = "0.3.17"
mime_guess = "2.0.4"
paste = "1.0.14"
rand = "0.9.0"
regex = "1.10.4"
rustls = "0.23.3"
rustls-pemfile = "2.1.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = "0.26.0"
url = "2.5.0"
urlencoding = "2.1.3"
uzers = "0.12.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
